@@ -1,0 +1,12 @@
+﻿namespace AjLanguage.Commands
+{
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Text;
+
+    public interface ICallable
+    {
+        object Invoke(BindingEnvironment environemnt, object[] arguments);
+    }
+}
